--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.application.name=product-service
+spring.data.mongodb.uri=mongodb+srv://admin:admin@twister.yoedxev.mongodb.net/twister?retryWrites=true&w=majority
+spring.data.mongodb.database=product-service
+server.port=8081
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.probability=1.0 
